infrastructure/base/hubble-ui/hubble.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.intranet.winetree94.com`)
      kind: Rule
      services:
        - name: hubble-ui
          port: 80
  tls:
    secretName: letsencrypt-cert
