infrastructure/base/hubble-ui/hubble.traefik.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-hubble-ui
  namespace: traefik-system
  labels:
    networking.tinyrack.net/owner: hubble-ui
  annotations:
    networking.tinyrack.net/hosts: hubble.intranet.winetree94.com
spec:
  description: Allow the hubble.intranet.winetree94.com route
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            namespace: kube-system
            serviceName: hubble-ui
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
